<resources>
    <string name="app_name">SimpleLauncher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="show_apps">Show Apps</string>
    <string name="apps">APPLICATIONS</string>
    <string name="ok">OK</string>
    <string name="content">lkhdfkegfjgdsjfgdskfgjsdgfjdsgvjdhgjfgdfjvdhbdgljrdfjhvdfjxvbh,j</string>
    <string name="smsbox">MESSAGES</string>
    <string name="sms_unread">UNREAD MESSAGES</string>
    <string name="sms_read">READ MESSAGES</string>
    <string name="sms_title">Title</string>
    <string name="sms_detail">asdfghjkl;asdfghjkl;</string>
    <string name="galleryBox">GALLERY</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="popup">Popup</string>
    <string name="contactBox">CONTACTS</string>
    <string name="livechannels">SELECT CHANNEL</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="topic">Topic</string>
    <string name="sms_timesend">00:00</string>
    <string name="sms_datesend">00 000 0000</string>
    <string name="photoBox">PHOTO BOX</string>
    <string name="button_next">NEXT</string>
    <string name="button_previous">PREVIOUS</string>
    <string name="save">SAVE</string>
    <string name="register">Register</string>
</resources>
