<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#374045"
    android:gravity="center"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="70dp"
        android:background="#cdcdcd">

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="10dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#212121"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/registerForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Username"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/username"
                android:textColor="#212121" />

            <EditText
                android:id="@+id/Password"
                android:inputType="textPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/password"
                android:textColor="#212121" />

            <EditText
                android:id="@+id/FName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/fname"
                android:textColor="#212121" />

            <EditText
                android:id="@+id/LName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/lname"
                android:textColor="#212121" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/email"
                android:textColor="#212121" />

            <EditText
                android:id="@+id/PhoneNum"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/phone"
                android:textColor="#212121" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

</LinearLayout>