<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#374045"
    android:weightSum="9">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/messagesBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smsbox"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:textSize="50sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ededed"
        android:layout_weight="1"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/userImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="#fff"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/smsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/userImg"
            android:text="@string/sms_title"
            android:paddingLeft="10dp"
            android:textColor="#212121"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/smsDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/smsTitle"
            android:layout_toRightOf="@+id/userImg"
            android:text="@string/sms_detail"
            android:paddingLeft="10dp"
            android:textSize="30sp"
            android:textColor="#212121" />

    </RelativeLayout>

</LinearLayout>